# world-bank-kg

./: .gitignore  Makefile  README.md  SPEC.md  main.py  output.txt  output_file.json  pyproject.toml  raw.csv  test_wikifier.py  unstructured_output.md  wikidata_cache.json  world-bank-kg.nt  world-bank-kg.ttl
notebooks/: 00_world-bank-kg.ipynb  011_chunking.ipynb  01_parse-pd.ipynb  02_preprocess.ipynb  03_ner.ipynb  blocks_mistral.md  output_mistral.md  output_mistral_inline.md  output_pymupdf.md  output_unstructured_li.md  raw.csv  unstructured_output.json  unstructured_output.md  unstructured_output_local.json  unstructured_output_local.md  world-bank-kg.nt  world-bank-kg.ttl
output/test/auto/: test.md  test_content_list.json  test_middle.json  test_model.json
scripts/: build-vector-store.py  download_unbis_vocab.py  parse-pdf-mineru.py  parse-pdf-pdfminer.py  parse-pdf-unstructured.py  query-vector.py  rebuild_from_files.py
src/: acronyms.py  graph.py  linker.py  mineru_demo.py  ner.py  parser.py  pipeline.py  prompts.py  query.py  reader.py  storage.py  summarize.py  utils.py
src/models/: custom_parser.py
storage/: docstore.json  index_store.json
tests/: conftest.py  test_acronyms.py  test_custom_parser.py  test_graph.py  test_linker.py  test_ner.py  test_pipeline.py  test_storage.py
