[project]
name = "world-bank-kg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "networkx>=3.4.2",
    "pandas>=2.3.2",
    "pydot>=4.0.1",
    "rdflib>=7.1.4",
    "requests>=2.32.5",
    "sparqlwrapper>=2.0.0",
    "tqdm>=4.67.1",
    "unidecode>=1.4.0",
]
