[project]
name = "world-bank-kg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.20",
    "docling>=2.48.0",
    "en-core-web-sm",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "langchain-unstructured>=0.1.6",
    "llama-index>=0.12.52",
    "llama-index-vector-stores-chroma>=0.4.2",
    "matplotlib>=3.10.5",
    "mineru[core]>=2.1.11",
    "mistralai>=1.9.9",
    "networkx>=3.4.2",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "pydot>=4.0.1",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
    "rdflib>=7.1.4",
    "requests>=2.32.5",
    "spacy>=3.8.7",
    "sparqlwrapper>=2.0.0",
    "tqdm>=4.67.1",
    "unidecode>=1.4.0",
    "unstructured[pdf]>=0.18.14",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz" }
